--- a/index.html
+++ b/index.html
@@ -22,20 +22,26 @@
 
 <body id="mybody">
     <header>
-        <div class="header-container">
-            <p class="top-text">New</p>
-            <h1>Buy Iphone 14</h1>
-            <p>From KR 8000</p>
+        <div class="text-logo">
+        <h1 id="brand"></h1>
+        <i class="fa-brands fa-apple"></i>
         </div>
-        <div class="container-switch">
-            <label class="switch"><input id="switch-toggle" type="checkbox">
-                <div class="toggle-circle"></div>
-            </label>
-            <p class="dark-light">Light Mode / Dark Mode</p>
+        <div class="myheader">
+            <div class="header-container">
+                <p class="top-text">New</p>
+                <h2>Buy Iphone 14</h2>
+                <p>From KR 8000</p>
+            </div>
+            <div class="container-switch">
+                <label class="switch"><input id="switch-toggle" type="checkbox">
+                    <div class="toggle-circle"></div>
+                </label>
+                <p class="dark-light">Light Mode / Dark Mode</p>
+            </div>
         </div>
     </header>
     <main>
-        <p class="img-top-text">The phone is available in four elegant color options </p>
+        <p class="img-top-text">The phone is available in four elegant color options:</p>
         <div id="colors" class="img-container">
             <div class="img-and-text-container">
                 <img id="black"
@@ -59,13 +65,18 @@
                 <p class="color-text border2" id="blue-stock"></p>
             </div>
         </div>
-        <section class="main-section">
+        <section class="model-text">
             <h2 id="model"></h2>
-            <p>
+            <p class="text">
                 The iPhone X is a premium smartphone from Apple that offers a stunning design and a range of
                 advanced features.
                 It features a sleek, bezel-less 5.8-inch Super Retina OLED display, providing vibrant colors and
                 excellent clarity.</p>
+                <div class="price-container">
+                    <p>Price:</p>
+                <p id="price"></p>
+                <p>KR</p>
+                </div>
         </section>
     </main>
 </body>
