--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
 <body id="mybody">
     <header>
         <div class="text-logo">
-        <h1 id="brand"></h1>
-        <i class="fa-brands fa-apple"></i>
+            <h1 id="brand"></h1>
+            <i class="fa-brands fa-apple"></i>
         </div>
         <div class="myheader">
             <div class="header-container">
@@ -72,11 +72,16 @@
                 advanced features.
                 It features a sleek, bezel-less 5.8-inch Super Retina OLED display, providing vibrant colors and
                 excellent clarity.</p>
-                <div class="price-container">
-                    <p>Price:</p>
+            <div class="storage-container" id="storage">
+                <div class="storage" id="small">156 GB</div>
+                <div class="storage" id="medium">256 GB</div>
+                <div class="storage" id="large">558 GB</div>
+                <div class="storage" id="xl">1 T</div>
+            </div>
+            <div class="price-container">
                 <p id="price"></p>
-                <p>KR</p>
-                </div>
+            </div>
+            <button class="button">Buy now</button>
         </section>
     </main>
 </body>
