--- a/index.html
+++ b/index.html
@@ -68,9 +68,9 @@
         <section class="model-text">
             <h2 id="model"></h2>
             <p class="text">
-                The iPhone X is a premium smartphone from Apple that offers a stunning design and a range of
+                The iPhone 14 is a premium smartphone from Apple that offers a stunning design and a range of
                 advanced features.
-                It features a sleek, bezel-less 5.8-inch Super Retina OLED display, providing vibrant colors and
+                It features a sleek, bezel-less 6.7-inch Super Retina OLED display, providing vibrant colors and
                 excellent clarity.</p>
             <div class="storage-container" id="storage">
                 <div class="storage" id="small">156 GB</div>
