--- a/index.html
+++ b/index.html
@@ -73,6 +73,7 @@
                 advanced features.
                 It features a sleek, bezel-less 6.7-inch Super Retina OLED display, providing vibrant colors and
                 excellent clarity.</p>
+                <p class="hard-drive">Hard drive:</p>
             <div class="storage-container" id="storage">
                 <div class="storage" id="small">156 GB</div>
                 <div class="storage" id="medium">256 GB</div>
